@@ -137,6 +137,7 @@ Mantis ChangeLog
  * config options default_advanced_report, default_advanced_view, and default_advanced_update are now ON/OFF instead of BOTH/SIMPLE/ADVANCED (they never worked the other way anyway)
  * Added a custom_headers config variable that included a list of headers to preprend to each outgoing HTTP response.  This can be used for P3P policy headers among other things (see issue #2649)
  * Added a allow_reporter_reopen config variable that allows reporters to reopen closed bugs that they reported if they are unhappy with the resolution (defaults to ON) (see issue #2108)
+ * Added $g_debug_email which allows debugging e-mail messages during development by only sending them to the specified e-mail while including the original to, cc, bcc in the message body (currently supported only when phpmailer is used).
 
 2002.08.23  -  0.17.5
  * Corrected bug_delete.php and bug_delete_page.php, which ignored the $g_allow_bug_delete_access_level setting.
